app/assets/tailwind/application.css
@import "tailwindcss";

@custom-variant dark (&:where(.dark, .dark *));

@theme {
  --color-background: #ffffff;
  --color-secondary-bg: #f4f4f4;
  --color-primary-txt: #121212;
  --color-secondary-txt: #888888;

  --color-error: #ff0000;
}

@layer {
  .dark {
    --color-background: #121212;
    --color-secondary-bg: #333333;
    --color-primary-txt: #f4f4f4;
    --color-secondary-txt: #bbbbbb;

    --color-error: #ff6b6b;
  }
}

@layer {
  .avatar {
    @apply rounded-full;
  }

  .dropdown {
    @apply z-10 text-primary-txt bg-background divide-y divide-gray-100 rounded-lg shadow-sm w-44 text-xs;
  }

  .dropdown-item {
    @apply flex justify-start items-center gap-2 px-4 py-2 hover:bg-secondary-bg dark:hover:bg-gray-600 dark:hover:text-white;
  }

  .nav-dropdown {
    @apply flex justify-center items-center gap-2 p-0.5 pr-1 hover:bg-secondary-bg rounded-full cursor-pointer;
  }
}

